# sim-tp1-logica

./: README.md  generacionNumerosAleatorios.py  generarNumeros.py  prueba.py  pyproject.toml  sim-tp1-logica.rar
dependencias/: pyvenv.cfg
dependencias/Scripts/: activate  activate.bat
generacionNumerosAleatorios.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
